--- a/lec/notes/2018-06-14.tex
+++ b/lec/notes/2018-06-14.tex
@@ -374,7 +374,7 @@ $\|u^k\| \leq C \gamma^{-k}$, then we have the bound
 \[
   \left\| \sum_{j=0}^k  (I-\alpha A)^{k-j} u_j \right\| \leq
   C \gamma^{-k} \sum_{j=0}^k \left( \gamma \|(I-\alpha A)\|\right)^{k-j} \leq
-  \frac{C \gamma^{-k-1}}{1-\|I-\alpha A\|}.
+  \frac{C \gamma^{-k-1}}{1-\gamma \|I-\alpha A\|}.
 \]
 Hence, we can make the iteration converge with inaccurate gradients,
 as long as the accuracy improves sufficiently quickly with time.
