--- a/hw/tex/2018-06-12.tex
+++ b/hw/tex/2018-06-12.tex
@@ -6,7 +6,7 @@
 
 \paragraph*{1: Trial and error}
 Using your favorite language and plotting system, produce a log-log
-plot of $\|(A+hE)^{-1}-A^{-1}-h A^{-1} E A^{-1}\|$ versus $h$ for
+plot of $\|(A+hE)^{-1}-(A^{-1}-h A^{-1} E A^{-1})\|$ versus $h$ for
 small $h$ and for
 \[
   A = \begin{bmatrix} 6 & 3 \\ 1 & 3 \end{bmatrix}, \quad
