Fixed typo in P2 of June 13 assignment.

--- a/hw/tex/2018-06-13.tex
+++ b/hw/tex/2018-06-13.tex
@@ -18,6 +18,6 @@ translate them to whatever language you would like.  Run the code
 for a few values of $m$, $n$, and $\sigma$; what do you see?
 Write code to regularize with truncated SVD and with Tikhonov
 regularization, and show plots to illustrate that it has the
-desired effectp.
+desired effect.
 
 \end{document}
