Fixed two typos in notes.

--- a/lec/notes/2018-06-13.tex
+++ b/lec/notes/2018-06-13.tex
@@ -221,7 +221,7 @@ squares problem without forming $A^T A$ by
 There is an alternate ``full'' QR decomposition where we write
 \[
 A = QR, \mbox{ where }
-Q = \begin{bmatrix} Q_1 & Q_2 \end{bmatrix} \in \bbR^{n \times n},
+Q = \begin{bmatrix} Q_1 & Q_2 \end{bmatrix} \in \bbR^{m \times m},
 R = \begin{bmatrix} R_{1} \\ 0 \end{bmatrix} \in \bbR^{m \times n}.
 \]
 To see how this connects to the least squares problem, recall
