--- a/lec/notes/2018-06-15.tex
+++ b/lec/notes/2018-06-15.tex
@@ -113,7 +113,7 @@ $\nabla \phi(x^k) \neq 0$, then for small enough $\epsilon$,
 \]
 since
 \[
-  -\nabla \phi(x^k)^T p^k = -\nabla \phi(x^k)^T M^{-1} \nabla
+  \nabla \phi(x^k)^T p^k = -\nabla \phi(x^k)^T M^{-1} \nabla
   \phi(x^k) < 0
 \]
 by positive definiteness of $M^{-1}$.
