Clarified 6/13 HW problem 1 (will also state in class).

--- a/hw/tex/2018-06-13.tex
+++ b/hw/tex/2018-06-13.tex
@@ -7,7 +7,7 @@
 \paragraph*{1: Minimal norm}
 Show how to find the solution to an underdetermined system
 $Ax = b$ where $A \in \bbR^{m \times n}$ with $m < n$ such
-that $x^T M x$ is minimal.
+that $x^T M x$ is minimal.  Assume $M$ is symmetric and positive definite.
 
 \paragraph*{2: An overfitting example}
 In the class repository, you will find codes that compute
