Corrections to notes for 6/13-14 (h/t JzMaple).

--- a/lec/notes/2018-06-13.tex
+++ b/lec/notes/2018-06-13.tex
@@ -375,7 +375,7 @@ and so
 \]
 Taking norm bounds, we find
 \[
-  \|A(\hat x - x)\| \leq \|A\| \|A_1^\dagger\| (\|e\| + \|r_1)\|),
+  \|A(\hat x - x)\| \leq \|A\| \|A_1^\dagger\| (\|e\| + \|r_1\|),
 \]
 and putting everything together,
 \[
