Uploaded 6/21 notes on NNLS.

--- a/lec/commonm.tex
+++ b/lec/commonm.tex
@@ -22,6 +22,7 @@
 \newcommand{\bbC}{\mathbb{C}}
 \newcommand{\calV}{\mathcal{V}}
 \newcommand{\calW}{\mathcal{W}}
+\newcommand{\calP}{\mathcal{P}}
 \newcommand{\macheps}{\epsilon_{\mathrm{mach}}}
 \newcommand{\matlab}{\textsc{Matlab}}
 
