--- a/lec/notes/2018-06-22.tex
+++ b/lec/notes/2018-06-22.tex
@@ -139,7 +139,7 @@ singular subspaces\footnote{%
 }
 of $R$.
 
-If we observe all the data (i.e. $R=A-XY$ with no projection),
+If we observe all the data (i.e. $R=A-XY^T$ with no projection),
 then for $X$ and $Y$ to span singular subspaces of $R$, they must
 span singular subspaces of $A$, and therefore can be written neatly
 in terms of the SVD of $A$.  In this case, one global minimizer is
